# RAINBOW

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  _config.yml  index.md  readme_examples.md  readme_installation_guide.md  rigid_bodies_app_cmd.py  rigid_bodies_app_gui.py
.github/workflows/: python-package-conda.yml
Tight-Inclusion-Wrap/: CmakeLists.txt  README.md  main.cpp
cpp/: CMakeLists.txt
cpp/isl/: CMakeLists.txt
cpp/isl/geometry/: CMakeLists.txt
cpp/isl/geometry/tetgen/: CMakeLists.txt  tetgenio_to_vector.cpp  tetgenio_to_vector.h  tetrahedralize.cpp  tetrahedralize.h  vector_to_tetgenio.cpp  vector_to_tetgenio.h
cpp/python/: CMakeLists.txt  py_isl_tetgen.cpp
data/urdf/ur_description/: ur5e.urdf
docs/: Gemfile  _config.yml  about.md  index.markdown  installation_guide.md
docs/_includes/: codeHeader.html
docs/_layouts/: default.html  page.html  page_documentation.html  page_documentation_single.html  page_help.html  page_install.html  sub_page.html
docs/_posts/: 2022-02-10-welcome-to-jekyll.markdown
docs/assets/code/: copy_code.js  utils.js
docs/assets/css/: style.scss
docs/my_collections/_documentation_pages/: .template  math_angle_degrees_radians.md  (+56 more)
docs/pages/: contact.md  documentation.md  examples.md  help.md  installation_guide.md
python/: demo_biomech_mesh_verification.ipynb  demo_fix_them_bones.ipynb  demo_inverse_kinematics.py  demo_inverse_kinematics_film_reel.py  demo_inverse_kinematics_onelink.py  demo_prox_rigid_bodies.ipynb  demo_prox_rigid_bodies_ccd.ipynb  demo_prox_rigid_bodies_procedural.ipynb  demo_prox_rigid_make_xml_scene_files.py  demo_prox_soft_bodies.ipynb  demo_prox_soft_bodies_bounce.ipynb  demo_prox_soft_bodies_cantilever.ipynb  demo_prox_soft_bodies_cantilever_beam.ipynb  demo_prox_soft_bodies_contraction.ipynb  demo_prox_soft_bodies_contraction_beam.ipynb  demo_prox_soft_bodies_penetration.ipynb  demo_rigid_body_simulator.py  demo_soft_body_beam.ipynb  demo_soft_body_surface.ipynb  demo_study.ipynb  demo_tetrahedron_sample_points.ipynb  demo_visualizer.py  demo_visualizer_against_blender.py  demo_visualizer_full_skeleton.py  demo_visualizer_limited.py  demo_volume_mesh_beam.ipynb  demo_volume_mesh_partition.ipynb  demo_volume_mesh_quality.ipynb  demo_volume_mesh_subdivision.ipynb  demo_volume_meshing.ipynb  demo_volume_meshing_csg.ipynb  demo_volume_meshing_sizing_field.ipynb  profile_cuda_by_Nsight_Compute.ipynb  profile_cuda_contact_points.ipynb  profile_get_gradient.ipynb  profile_speedup_contact_points_reduction.ipynb  rigid_bodies_app_cmd.py  rigid_bodies_app_gui.py  unit_prox_soft_bodies.py
python/profile/: profile_collision.py
python/soft_body_app/: hanging_beam_simulation.py  midpoint_traction_beam_simulation.py  soft_application.py  soft_sheet.py
python/soft_body_demo/: exec.ipynb  exec.py  soft_body_beam_1.py  soft_body_beam_2.py  soft_body_sim_helper.py  soft_body_surface.py
python/unit_tests/: test_cuda_geometry_barycentric.py  test_cuda_geometry_grid3.py  test_cuda_math_linalg.py  test_cuda_math_matrix.py  test_cuda_math_vec.py  test_geometry_barycentric.py  test_geometry_grid3.py  test_geometry_surface_mesh.py  test_higher_order_triangle_fem.py  test_inertia_tensor.py  test_inverse_kinematics.py  test_inverse_kinematics_second.py  test_math_angle.py  test_math_coordsys.py  test_math_euler.py  test_math_expmap.py  test_math_functions.py  test_math_matrix3.py  test_math_polynomial.py  test_math_quaternion.py  test_math_vector3.py  test_prox_rigid_bodies.py  test_prox_soft_bodies.py  test_random_graph_coloring.py  test_utils_USD.py  test_utils_parse_string.py
rainbow/geometry/: aabb.py  grid3.py  kdop.py  mean_curvature.py  spatial_hashing.py  surface_mesh.py  volume_mesh.py
rainbow/math/: euler.py  expmap.py  functions.py  matrix3.py  quaternion.py
rainbow/util/: USD.py
sandbox/: demo_inverse_kinematics.py  demo_prox_soft_bodies_cantilever.ipynb
sandbox/soft_body_app/: hanging_beam_simulation.py  soft_application.py  soft_sheet.py
unit_tests/: test_geometry_aabb.py  test_geometry_barycentric.py  test_geometry_spatial_hashing.py  test_geometry_surface_mesh.py  test_inverse_kinematics.py  test_mass.py  test_math_angle.py  test_math_coordsys.py  test_math_euler.py  test_math_functions.py  test_math_matrix3.py  test_math_polynomial.py  test_math_quaternion.py  test_prox_soft_bodies.py
(+236 files in other folders)
